Added jest coverage script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
+    "coverage": "jest --coverage",
     "dev": "nodemon index.js"
   },
   "keywords": [],
